--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icon": "^1.0.0",
+    "react-icons": "^4.3.1",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
@@ -36,7 +37,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "react-icons": "^4.3.1"
-  }
+  "devDependencies": {}
 }
